# Air-hockey

./: .gitignore
Game/: CMakeLists.txt  CircleWidget.h  Interfaces.h  Log.h  QtClientPlayer.h  Scene.h  main.cpp  mainwindow.cpp  mainwindow.h
Game/Client/: Client.cpp  QtClientPlayer.h  Scene.h  TcpClient.h  mainwindow.h
Game/Server/: ClientPlayer.h  Game.h  Server.cpp  Server.h
